@@ -85,6 +85,7 @@ public class DocTableInfoBuilder {
             try {
                 concreteIndices = metaData.concreteIndices(IndicesOptions.strictExpandOpen(), ident.indexName());
                 if (concreteIndices.length == 0) {
+                    // no matching index found
                     throw new TableUnknownException(ident);
                 }
                 docIndexMetaData = buildDocIndexMetaData(concreteIndices[0]);
@@ -164,9 +165,12 @@ public class DocTableInfoBuilder {
                 md.indices(),
                 md.references(),
                 md.analyzers(),
-                md.primaryKey(), md.routingCol(),
-                md.isAlias(), md.hasAutoGeneratedPrimaryKey(),
-                concreteIndices, clusterService,
+                md.primaryKey(),
+                md.routingCol(),
+                md.isAlias(),
+                md.hasAutoGeneratedPrimaryKey(),
+                concreteIndices,
+                clusterService,
                 md.numberOfShards(), md.numberOfReplicas(),
                 md.tableParameters(),
                 md.partitionedBy(),
