@@ -5,6 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fixed an issue that caused orphaned partitions with an remaining alias to
+   not be recognized correctly
+
  - Fixed an issue that was causing like queries to fail if using a special regex 
    character
 
